# hardboiled

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
skeleton/: .env.example  .gitignore  config.py  local_build.sh  main.py  netlify.toml  package.json  pyproject.toml.template  tailwind.config.js
skeleton/src/templates/: base.html  index.html  macros.html
src/hardboiled/: __init__.py  builder.py  config.py  utils.py
tests/: __init__.py  test_builder.py
